--- a/index.pug
+++ b/index.pug
@@ -39,8 +39,8 @@ html(lang="ru")
             .user-enter
               a.enter(href="login.html" aria-label="login") Войти
                 svg(xmlns="http://www.w3.org/2000/svg" width="20" height="17" viewBox="0 0 20 17")
-                  path(fill="#c5c5c5" d="M14.875 8.5L6 0v6H0v5h6v6z")
-                  path(fill="#c5c5c5" d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
+                  path(d="M14.875 8.5L6 0v6H0v5h6v6z")
+                  path(d="M16.986 15.01h-5.027V17h5.027c2.178 0 3.004-1.81 3.029-3.026V3.028C19.99 1.811 19.164 0 16.986 0h-5.027v1.99h5.027c.839 0 .992.681 1.01 1.057v10.904c-.017.376-.171 1.059-1.01 1.059z")
               a.registration(href="registration.html") Регистриция
         nav.navigation
           ul.navigation-list
@@ -131,7 +131,6 @@ html(lang="ru")
               a(href="")
                 img(src="img/Perforator_2000.jpg", alt="Perforator_2000")
               .hidden
-                .flag-item
                 a.buy(href="") купить
                 button(type="submit") в закладки
               h3.title Перфоратор BOSCH BFG 2000
@@ -184,15 +183,20 @@ html(lang="ru")
                 .service-tab-item.service-tab-delivery.active
                   .text-delivery
                     h3 Доставка
-                    p Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж!
+                    p Мы с удовольствием доставим ваш товар прямо
+                      br/ к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем,
+                      br/ поднимая его на ваш этаж!
                 .service-tab-item.service-tab-guarantee
                   .text-guarantee
                     h3 Гарантия
-                    p Если купленный у нас товар поломается или заискрит, а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый. Дом уж восстановите как-нибудь сами.
+                    p Если купленный у нас товар поломается или заискрит,
+                      br/ а также в случае пожара, спровоцированного его возгоранием,  вы всегда можете быть уверены в нашей гарантии. Мы обменяем сгоревший товар на новый.
+                      br/ Дом уж восстановите как-нибудь сами.
                 .service-tab-item.service-tab-credit
                   .text-credit
                     h3 Кредит
-                    p Залезть в долговую яму стало проще! Кредитные консультанты придут вам на помощь.
+                    p Залезть в долговую яму стало проще!
+                      br/ Кредитные консультанты придут вам на помощь.
                   a.btn(href="") отправить заявку
         .about
           .container
