--- a/index.pug
+++ b/index.pug
@@ -17,7 +17,7 @@ html(lang="ru")
               input(type="text" id="search" placeholder="Поиск:")
               label.search-icon(for="search")
                 svg(xmlns="http://www.w3.org/2000/svg" width="17" height="17" viewBox="0 0 17 17")
-                  path(fill="#ffffff" d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
+                  path(d="M17 15.586l-3.542-3.542A7.465 7.465 0 0 0 15 7.5 7.5 7.5 0 1 0 7.5 15c1.71 0 3.282-.579 4.544-1.542L15.586 17 17 15.586zM2 7.5C2 4.467 4.467 2 7.5 2 10.532 2 13 4.467 13 7.5c0 3.032-2.468 5.5-5.5 5.5A5.506 5.506 0 0 1 2 7.5z")
           .bookmarks
             a.bookmark-icon(href="") закладки:
             span 0
@@ -29,12 +29,12 @@ html(lang="ru")
         .middle-row
           .slogan
             h2.visually-hidden главные данные
-            p Интернет-магазин строительных материалов и инструментов для ремонта
+            p Интернет-магазин строительных материалов &nbsp; и инструментов для ремонта
           .address
             .phone-number
               .phone
               a.number(href="tel:+78125550555") +7 (812) 555-05-55
-            p г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+            p г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
           .authorization
             .user-enter
               a.enter(href="login.html" aria-label="login") Войти
@@ -62,6 +62,7 @@ html(lang="ru")
       section.categories
         .container
           .left-column
+            .flag-item
             .categories-item.material
               h3 материалы
               a.btn(href="") на любой вкус
@@ -201,7 +202,7 @@ html(lang="ru")
         .about
           .container
             .company
-              h2 Компания "Техномарт"
+              h2 Компания «Техномарт»
               p.text Настоящий мужской шопинг начинается здесь! огромный выбор товаровдля ремонта и строительства не оставит равнодушным любителей сэкономить на гастарбайтерах.
               p.text Мы можемдоставить ваш товар в самые отдельные точки России! Техномарт работает со многими ранспортными компаниями:
               ul.partners
@@ -232,7 +233,7 @@ html(lang="ru")
               a(href="") Контакты
       .footer-middle-row
         .container
-          p.footer-address г. Санкт-петербург, ул. Б. Конюшенная, д. 19/8
+          p.footer-address г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
             a(href="tel:+78125550555") +7 (812) 555-05-55
           ul.footer-category
             li.footer-category-item
@@ -245,7 +246,7 @@ html(lang="ru")
               a(href="") Спецпредложения
       .footer-bottom-row
         .container
-          p.footer-rights © 2010-2017 Компания "Техномарт" Все права защищены
+          p.footer-rights © 2010-2017 Компания «Техномарт» Все права защищены
           section.socials
             .social-item.vk
               a(href="vk.com" target="_blank" aria-label="vk")
