--- a/css/style.styl
+++ b/css/style.styl
@@ -194,8 +194,8 @@ a
 .search-icon:hover > svg
   fill $color-52
 
-.search+form:focus-within > svg
-  fill $color-53
+.search:focus-within > svg
+  fill $color-04
 
 .bookmarks, .cart
   display flex
@@ -314,6 +314,7 @@ a
 
 .user-enter
   display flex
+  margin-left 61px
 
 .enter
   width 121px
